<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tennis_ball_tracker</name>
  <version>0.0.1</version>
  <description>ROS 2 package for detecting a tennis ball using OpenCV.</description>
  <maintainer email="2003sitanshu@gmail.com">sitanshu</maintainer>
  <license>Apache License 2.0</license> <!-- Or your preferred license -->

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <!-- <depend>python3-opencv</depend> No, opencv is a system dependency usually -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

